feat: Add FHEVM Hardhat template with UniversalPrivacyHook implementation
- Migrate UniversalPrivacyHook contract from Foundry to Hardhat
- Implement HybridFHERC20 token with FHE encrypted balances
- Add Queue contract for managing encrypted values
- Fix compilation issues:
  - Update Solidity version to 0.8.25
  - Fix FHE library function calls (lte → le)
  - Fix type conversions for euint128
  - Add input proof parameter for external encrypted values
  - Enable viaIR to resolve stack too deep errors
- Add comprehensive tests for HybridFHERC20 and Queue contracts
- Update .gitignore for generated files

Note: UniversalPrivacyHook tests not implemented yet (requires Uniswap V4 mock setup)

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,11 @@ packages/*/.env
 packages/*/.turbo
 packages/*/coverage
 tmp*
+
+# Root level generated files
+package-lock.json
+
+# Documentation files (can be regenerated)
+IMPLEMENTATION_CONTEXT.md
+MIGRATION_TO_ZAMA.md
+README_PRIVACY_HOOK.md
