Deploy UniversalPrivacyHook to Sepolia with Uniswap V4
Successfully deployed and initialized privacy hook on Sepolia:
- UniversalPrivacyHook: 0x02aE81d1063c3FDC21a812E79408c3D3370E0080
- MockUSDC: 0x59dd1A3Bd1256503cdc023bfC9f10e107d64C3C1
- MockUSDT: 0xB1D9519e953B8513a4754f9B33d37eDba90c001D
- DeterministicDeployFactory: 0xC43192FA7dE17d93e03a80FcaB68Ff0Cb0c358cf

Changes:
- Created custom CREATE2 factory for deterministic deployment
- Mined hook address with correct permission bits (0x0080)
- Added Sepolia-specific hardhat config without FHEVM plugin
- Created deployment and verification scripts
- Initialized Uniswap V4 pool with hook

Note: Liquidity addition via PoolModifyLiquidityTest has settlement issues.
Will use Foundry for proper liquidity management in future.

--- a/packages/fhevm-hardhat-template/package.json
+++ b/packages/fhevm-hardhat-template/package.json
@@ -28,6 +28,7 @@
     "@uniswap/v4-core": "^1.0.2",
     "@uniswap/v4-periphery": "^1.0.3",
     "@zama-fhe/oracle-solidity": "^0.1.0",
+    "dotenv": "^17.2.1",
     "encrypted-types": "^0.0.4"
   },
   "devDependencies": {
