--- a/packages/fhevm-hardhat-template/package.json
+++ b/packages/fhevm-hardhat-template/package.json
@@ -52,6 +52,7 @@
     "eslint-config-prettier": "^9.1.0",
     "ethers": "^6.15.0",
     "hardhat": "^2.26.0",
+    "hardhat-contract-sizer": "^2.10.1",
     "hardhat-deploy": "^0.11.45",
     "hardhat-gas-reporter": "^2.3.0",
     "mocha": "^11.7.1",
