feat: AVS swap batching with FHE encryption and gas optimizations
  - Fixed FHE encryption context parameters for correct inputProof verification
  - Changed Hook internal transfers from mint to transfer
  - Added 120% gas price boost for faster transaction inclusion
  - Updated contract addresses for new deployments (Hook: 0x32841c9E0245C4B1a9cc29137d7E1F078e6f0080, SwapManager:
  0xFbce8804FfC5413d60093702664ABfd71Ce0E592)
  - Fixed operator encryption to use correct (contractAddress, userAddress) order
  - Removed temporary test scripts

--- a/packages/hello-world-avs/contracts/foundry.toml
+++ b/packages/hello-world-avs/contracts/foundry.toml
@@ -5,7 +5,9 @@ libs = ["lib"]
 fs_permissions = [{ access = "read-write", path = "./" }]
 solc = "0.8.27"
 optimizer = true
+optimizer_runs = 50
 via_ir = true
+allow_paths = ["../../fhevm-hardhat-template/node_modules", "../../../node_modules"]
 
 remappings = [
     "@eigenlayer/=lib/eigenlayer-middleware/lib/eigenlayer-contracts/src/",
@@ -14,6 +16,9 @@ remappings = [
     "@openzeppelin/=lib/eigenlayer-middleware/lib/openzeppelin-contracts/",
     "@openzeppelin-upgrades/=lib/eigenlayer-middleware/lib/openzeppelin-contracts-upgradeable/",
     "@fhenixprotocol/=lib/fhenix-contracts/",
+    "@fhevm/=../../fhevm-hardhat-template/node_modules/@fhevm/",
+    "encrypted-types/=../../../node_modules/encrypted-types/",
+    "@zama-fhe/oracle-solidity/=../../../node_modules/@zama-fhe/oracle-solidity/",
     "forge-std/=lib/forge-std/src/",
 ]
 
