1. Add Nexus SDK wrapper (EIP‑1193 provider, runtime shims) and wire operator      to split UEIs by chain, remap calldata, and send remote batches via      sdk.execute (with per-chain RPC switching).   2. Introduce BaseSwapManager contract/test plus deployment script that      reads deployment JSON, seeds vault tokens, and records artifacts for Base      (including new JSON manifests).   3. Update UEI encryption script to produce two intents with explicit Sepolia/      Base chain IDs; ensure Base RPC (BASE_RPC_URL) is respected; refresh chain      config/address mapping to include Base endpoints.

--- a/packages/hello-world-avs/contracts/foundry.toml
+++ b/packages/hello-world-avs/contracts/foundry.toml
@@ -30,6 +30,7 @@ mainnet = "${MAINNET_RPC_URL}"
 holesky = "${HOLESKY_RPC_URL}"
 sepolia = "${SEPOLIA_RPC_URL}"
 anvil = "${ANVIL_RPC_URL}"
+base_sepolia = "${BASE_SEPOLIA_RPC_URL}"
 
 [etherscan]
 mainnet = { key = "${ETHERSCAN_API_KEY}" }
