--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -38,7 +38,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@fhevm/mock-utils": "0.0.1-6",
+    "@fhevm/mock-utils": "^0.1.0",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^16.3.0",
