--- a/packages/hello-world-avs/package.json
+++ b/packages/hello-world-avs/package.json
@@ -6,11 +6,11 @@
     "start:operator": "cat contracts/out/SwapManager.sol/SwapManager.json | jq -r '.abi' > abis/SwapManager.json && ts-node operator/index.ts",
     "start:operator:prod": "ts-node operator/index.ts",
     "start:helper": "ts-node operator/createEncryptedSwapTasks.ts",
-    "start:all": "npm run start:helper & npm run start:operator:prod",
+    "start:all": "npm run start:helper & npm run start:operator:prod && npm run start:uei",
     "start:traffic": "ts-node operator/createEncryptedSwapTasks.ts",
     "start:universal": "ts-node operator/createUniversalSwapTasks.ts",
     "start:universal-js": "node operator/createUniversalSwapTasks.js",
-    "start:uei": "ts-node operator/createEncryptedUEITasks.ts",
+    "start:uei": "ts-node operator/ueiProcessor.ts",
     "start:anvil": "anvil",
     "deploy:core": "cd contracts && forge script script/DeployEigenLayerCore.s.sol --rpc-url http://localhost:8545 --broadcast --optimize --optimizer-runs 200 --via-ir",
     "deploy:swap-manager": "cd contracts && forge script script/SwapManagerDeployer.s.sol --rpc-url http://localhost:8545 --broadcast --optimize --optimizer-runs 200 --via-ir",
