--- a/packages/hello-world-avs/package.json
+++ b/packages/hello-world-avs/package.json
@@ -6,7 +6,7 @@
     "start:operator": "cat contracts/out/SwapManager.sol/SwapManager.json | jq -r '.abi' > abis/SwapManager.json && ts-node operator/index.ts",
     "start:operator:prod": "ts-node operator/index.ts",
     "start:helper": "ts-node operator/createEncryptedSwapTasks.ts",
-    "start:all": "npm run start:helper & npm run start:operator:prod && npm run start:uei",
+    "start:all": "npm run start:helper & npm run start:operator:prod & npm run start:uei",
     "start:traffic": "ts-node operator/createEncryptedSwapTasks.ts",
     "start:universal": "ts-node operator/createUniversalSwapTasks.ts",
     "start:universal-js": "node operator/createUniversalSwapTasks.js",
